added color and fixing positioning

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div>
+        <div class="nav-bar">
+            <div class="score-box-style" id="score-box-container">
+                <a href="#" class="high-score-link">View high scores</a>
+            </div>
+            <div class="time-box-style" id="time-box-container">
+                <time id="time-box-container-2">Time: 0</time>
+            </div>
+        </div>
+        <div class="title" id="question-container">
+            <h1>Coding Quiz Challenge</h1>
+        </div>
+        <p class="p-text-style" id="p-container">
+            Try to answer the following code-related questions within the time limit. Keep in mind that incorrect
+            answers will penalize your score/time by ten seconds!</p>
+        </p>
+
+        <button type="button" onclick="alert('You clicked the button')">Start Quiz</button>
+    </div>
 </body>
+
 </html>
