finished layout and stylingclear

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div>
         <div class="nav-bar">
-            <div class="score-box-style" id="score-box-container">
-                <a href="#" class="high-score-link">View high scores</a>
+            <div id="score-box-container">
+                <a href="#" class="score-box-style">View high scores</a>
             </div>
-            <div class="time-box-style" id="time-box-container">
-                <time id="time-box-container-2">Time: 0</time>
+            <div class="test" id="time-box-container">
+                <time class="time-style">Time: 0</time>
             </div>
         </div>
         <div class="title" id="question-container">
@@ -27,7 +27,7 @@
             answers will penalize your score/time by ten seconds!</p>
         </p>
 
-        <button type="button" onclick="alert('You clicked the button')">Start Quiz</button>
+        <button class="button-style" type="button" onclick="alert('You clicked the button')">Start Quiz</button>
     </div>
 </body>
 
