--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Document</title>
+    <title>Code Quiz</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                 <a href="#" class="score-box-style">View high scores</a>
             </div>
             <div class="test" id="time-box-container">
-                <time class="time-style">Time: 0</time>
+                <h3 class="time_style" id="timer">Time: 0</time>
             </div>
         </div>
         <div class="title" id="question-container">
@@ -27,8 +27,12 @@
             answers will penalize your score/time by ten seconds!</p>
         </p>
 
-        <button class="button-style" type="button" onclick="alert('You clicked the button')">Start Quiz</button>
+        <button class="startBtnStyle" id="startBtnId" type="button">Start Quiz</button>
     </div>
+
+    <script src="assets/js/script.js"></script>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
-</html> h
+</html>
