working on timer minutes/seconds and timer start on click

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="title" id="question-container">
             <h1>Coding Quiz Challenge</h1>
         </div>
-        <p class="p-text-style" id="p-container">
+        <p class="p-text-style" id="paragraphContainer">
             Try to answer the following code-related questions within the time limit. Keep in mind that incorrect
             answers will penalize your score/time by ten seconds!</p>
         </p>
