testing functions to show questions/answers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </div>
         </div>
         <div class="title" id="question-container">
-            <h1>Coding Quiz Challenge</h1>
+            <div id="headingContainer2">
+                <h1 id="heading1">Coding Quiz Challenge</h1>
+            </div>
         </div>
         <p class="p-text-style" id="paragraphContainer">
             Try to answer the following code-related questions within the time limit. Keep in mind that incorrect
@@ -28,10 +30,10 @@
         </p>
 
         <button class="startBtnStyle" id="startBtnId" type="button">Start Quiz</button>
+
     </div>
 
     <script src="assets/js/script.js"></script>
-    <script src="jquery-3.5.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
